# interview-assistant

./: .env.example  .gitignore  ONBOARDING.md  README.md  firestore.rules  instrumentation.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx
app/(auth)/: layout.tsx  loading.tsx
app/(candidate)/: layout.tsx
app/(candidate)/take/[token]/done/: page.tsx
app/(candidate)/take/[token]/interview/: page.tsx
app/(candidate)/take/[token]/interview/_components/: SessionRoomClient.tsx
app/(candidate)/take/[token]/upload-cv/: page.tsx
app/(hr)/: layout.tsx
app/(hr)/reports/[sessionId]/: page.tsx
app/(hr)/templates/: page.tsx
app/(hr)/templates/[id]/: page.tsx
app/(hr)/templates/[id]/candidates/: page.tsx
app/(hr)/templates/new/: page.tsx
app/(practice)/: layout.tsx
app/(practice)/practice/: page.tsx
app/(practice)/practice/[sessionId]/: page.tsx
app/(practice)/practice/[sessionId]/interview/: page.tsx
app/(practice)/practice/[sessionId]/report/: page.tsx
app/(practice)/practice/new/: page.tsx
app/(practice)/practice/settings/: page.tsx
app/(root)/: layout.tsx  loading.tsx  page.tsx
app/(root)/interview/: page.tsx
app/(root)/interview/[id]/: loading.tsx  page.tsx
app/(root)/interview/[id]/_components/: MicLevelMeter.tsx  PreCallReadyScreen.tsx  RoomClient.tsx
app/(root)/interview/[id]/feedback/: loading.tsx  page.tsx
app/(root)/interview/_components/: InterviewForm.tsx
app/api/interviews/generate/: route.ts
app/api/invites/[token]/redeem/: route.ts
app/api/practice/cv/: route.ts
app/api/practice/sessions/: route.ts
app/api/sessions/[id]/cv/: route.ts
app/api/sessions/[id]/end/: route.ts
app/api/sessions/[id]/livekit-token/: route.ts
app/api/templates/: route.ts
app/api/templates/[id]/: route.ts
app/api/templates/[id]/invite/: route.ts
app/take/[token]/: page.tsx
components/: AuthForm.tsx  DisplayTechIcons.tsx  FormField.tsx  InterviewCard.tsx  LogoutButton.tsx  ScoreProgressCard.tsx  SettingsSheet.tsx
components/candidate/: CvUploadForm.tsx  InviteLanding.tsx
components/hr/: CandidateRow.tsx  InviteLinkCopy.tsx  ReportView.tsx  TemplateForm.tsx
components/practice/: PracticeForm.tsx  PracticeRow.tsx  ScoreSparkline.tsx  SettingsCv.tsx
components/ui/: button.tsx  input.tsx
constants/: index.ts
docs/: observability.md  resumable-sessions.md  security.md
docs/superpowers/plans/: 2026-05-07-livekit-pipeline.md  2026-05-09-hr-interview-platform-v01.md  2026-05-11-multi-agent-panel.md  2026-05-11-practice-mode.md
docs/superpowers/specs/: 2026-05-07-livekit-pipeline-design.md  2026-05-09-hr-interview-platform-v01-design.md  2026-05-11-multi-agent-panel-design.md  2026-05-11-practice-mode-design.md
eval/: README.md  baselines.json  env.ts  fixtures.ts  latency-report.ts  run.ts  scorers.ts  types.ts
lib/: admin-claims.ts  cost-rates.ts  cv-parse.ts  livekit.ts  role-resolution.ts  tracing.ts
lib/actions/: auth.action.ts  general.action.ts  interview.action.ts  practice.action.ts  reports.action.ts  sessions.action.ts  templates.action.ts
lib/llm/: groq-feedback.ts  groq-grounding.ts  groq-template.ts
livekit-agent/: .env.example  Dockerfile  README.md  pyproject.toml
livekit-agent/src/interview_agent/: __init__.py  agent.py  cost_aggregator.py  cost_rates.py  hooks.py  input_classifier.py  latency_budget.py  messages.py  metrics_bridge.py  persona.py  pipeline.py  prompts.py  rag.py  security_guards.py  session_data.py  tracing.py
livekit-agent/src/interview_agent/persistence/: __init__.py  firestore.py  models.py
livekit-agent/src/interview_agent/security/: __init__.py  injection_corpus.py  run_audit.py  runner.py
livekit-agent/tests/: test_agent.py  test_cost.py  test_hooks.py  test_input_classifier.py  test_latency.py  test_messages.py  test_persistence.py  test_persona.py  test_pipeline.py  test_prompts.py  test_rag.py  test_resume.py  test_security_guards.py  test_session_data.py  test_smoke.py  test_tracing.py
scripts/: migrate-v0.1.ts
tests/: cost-rates.test.ts  role-resolution.test.ts  schemas.test.ts
types/: index.d.ts  livekit.d.ts
