[project]
name = "interview-agent"
version = "0.1.0"
description = "LiveKit Agents worker for the Interview Assistant voice interviewer."
requires-python = ">=3.11"
dependencies = [
  "livekit-agents>=1.5,<2",
  "livekit-plugins-deepgram>=1.5,<2",
  "livekit-plugins-openai>=1.5,<2",
  "livekit-plugins-elevenlabs>=1.5,<2",
  "livekit-plugins-silero>=1.5,<2",
  "firebase-admin>=6.5",
  "python-dotenv>=1.0",
  "llama-index-core>=0.12,<0.13",
  "llama-index-embeddings-fastembed>=0.3,<0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
