[project]
name = "interview-agent"
version = "0.1.0"
description = "LiveKit Agents worker for the Interview Assistant voice interviewer."
requires-python = ">=3.11"
dependencies = [
  "livekit-agents>=1.5,<2",
  "livekit-plugins-deepgram>=1.5,<2",
  "livekit-plugins-openai>=1.5,<2",
  "livekit-plugins-elevenlabs>=1.5,<2",
  "livekit-plugins-silero>=1.5,<2",
  "firebase-admin>=6.5",
  "python-dotenv>=1.0",
  # llama-index-core 0.13 fixes GHSA-cr7q-2w66-hjcm (insecure temp-file
  # handling). 0.13 removed the deprecated agent/QueryPipeline classes;
  # rag.py only uses Document / VectorStoreIndex / Settings / embed_model,
  # which are unchanged.
  "llama-index-core>=0.13,<0.14",
  "llama-index-embeddings-fastembed>=0.6,<0.7",
  # fastembed is imported by llama-index-embeddings-fastembed at runtime
  # but was DROPPED from its declared dependencies in 0.6.0. Pinning it
  # here so `uv sync` actually installs the ONNX backend the embedder
  # wrapper expects.
  "fastembed>=0.4,<1",
  # OpenTelemetry — share the trace started by the Next.js server action.
  # opentelemetry-exporter-otlp-proto-http rides over plain HTTPS, no
  # collector or gRPC dependency.
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  # Input-side prompt-injection classifier — direct transformers +
  # optimum.onnxruntime wrapper rather than llm-guard, because
  # llm-guard's PromptInjection scanner hard-codes label=="INJECTION"
  # and would silently mis-score Llama Prompt Guard 2 (MALICIOUS/BENIGN)
  # or any other label scheme. transformers is already pulled in
  # transitively via llama-index-embeddings-fastembed.
  "optimum[onnxruntime]>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
